gnubiff -- History of visible changes.

Copyright (C) 2000-2006 Nicolas Rougier <Nicolas.Rougier@loria.fr> and
              2004-2006 Robert Sowada <sowadart@gmx.de>.
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.2.4
 * Robert Sowada
   - Changed version to 2.2.4
   - Bugfix: Option "filter_global_last" was not available
	
Version 2.2.3		2006-10-15 18:46
 * Robert Sowada
   - Changed version to 2.2.3
   - Bugfix: Encrypting passwords that are longer than 16 characters (debian
        bug #378233; thanks to Julio Mendoza for reporting this bug)
   - Bugfix: Encrypting passwords that have a length of 16, 32, 48 etc.
   - Bugfix: Code fixes to avoid gcc warnings
   - Bugfix: Ignore SIGPIPE signal for using SSL properly
   - Bugfix: Compiling without "fam.h" (thanks to Tom K. for reporting this
        bug)
   - Bugfix: Short password compatibility (debian bug #385625 by Antoine
        Sirinelli)
   - Added Julio Mendoza and Antoine Sirinelli to contributors
   - Bugfix: Including "sys/types.h" when including "regex.h" (needed for
        FreeBSD 4; thanks to Tim Bishop for reporting)

Version 2.2.2           2006-08-06 18:47
 * Robert Sowada
   - Changed version to 2.2.2
   - Bugfix: Obtaining the panel's size (GNOME)
   - Updated Hungarian translation (thanks to Wallner Adam)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Feature: Three new options for filtering messages via regular expressions
        (feature request #1493670 by sunyata and others)
   - Cleanup: Substituted static mutex for popup by regular mutex
   - Cleanup: Added test for header file "regex.h" in "configure.ac"
   - Bugfix: Status of multipart messages (thanks to Chris Kemp for reporting
        and fixing this bug; bug was reported as #1514879 before by mtorroja)
   - Added Chris Kemp to contributors
   - Updated German Translation

Version 2.2.1		2006-05-14 20:08
 * Robert Sowada